added portfolio carousel

--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
     />
   </head>
   <body>
-    <nav class="pink darken-4" role="navigation">
+    <!-- <nav class="pink darken-4" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo"></a>
         <ul class="right hide-on-med-and-down">
-          <!-- <li><a href="/index.html">About</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contact</a></li> -->
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
@@ -40,7 +37,7 @@
           ><i class="material-icons">menu</i></a
         >
       </div>
-    </nav>
+    </nav> -->
 
     <div id="index-banner" class="parallax-container">
       <div class="section no-pad-bot">
@@ -56,10 +53,10 @@
           </div>
           <div class="row center">
             <a
-              href="http://materializecss.com/getting-started.html"
+              href="./assets/Resume 2020  (1).pdf"
               id="download-button"
               class="btn-large waves-effect waves-light pink darken-4"
-              >Get Started</a
+              >Resume</a
             >
           </div>
           <br /><br />
@@ -79,30 +76,14 @@
               <h2 class="center red-text lighten-1">
                 <i class="material-icons">code</i>
               </h2>
-              <h5 class="center">Speeds up development</h5>
+              <h5 class="center">Coding Experience</h5>
 
               <p class="light">
-                We did most of the heavy lifting for you to provide a default
-                stylings that incorporate our custom components. Additionally,
-                we refined animations and transitions to provide a smoother
-                experience for developers.
-              </p>
-            </div>
-          </div>
-
-          <div class="col s12 m4">
-            <div class="icon-block">
-              <h2 class="center red-text lighten-1">
-                <i class="material-icons">folder_open</i>
-              </h2>
-              <h5 class="center">User Experience Focused</h5>
-
-              <p class="light">
-                By utilizing elements and principles of Material Design, we were
-                able to create a framework that incorporates components and
-                animations that provide more feedback to users. Additionally, a
-                single underlying responsive system across all platforms allow
-                for a more unified user experience.
+                Currently enrolled in UC Berkeley Extension Full Stack
+                Development Bootcamp from March 2020 until September 2020. The
+                curriculum consists of the following to learn how to create a
+                full stack interface application: HTML, CSS, Javascript, JQUERY,
+                Node.js, Express, MySql, Sequelize, MongoDB, and React.
               </p>
             </div>
           </div>
@@ -112,13 +93,32 @@
               <h2 class="center red-text lighten-1">
                 <i class="material-icons">mood</i>
               </h2>
-              <h5 class="center">Easy to work with</h5>
+              <h5 class="center">Team Oriented skills</h5>
 
               <p class="light">
-                We have provided detailed documentation as well as specific code
-                examples to help new users get started. We are also always open
-                to feedback and can answer any questions a user may have about
-                Materialize.
+                Possesses excellent collaboration abilities and has had to work
+                with various types of teams. Also has had to demonstrate
+                leadership skills and manage teams for different projects both
+                in education and professiionally.
+              </p>
+            </div>
+          </div>
+
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center red-text lighten-1">
+                <i class="material-icons">folder_open</i>
+              </h2>
+              <h5 class="center">
+                Administration Experience
+              </h5>
+
+              <p class="light">
+                Has about 6 years of administrative and customer support skills,
+                which were acquired in a multitude of settings. Experience with
+                Microsoft programs such as Word, Excel, Publisher, and
+                Powerpoint. Also involoved in event coordination, public
+                speaking, design, and general data entry.
               </p>
             </div>
           </div>
@@ -131,7 +131,8 @@
         <div class="container">
           <div class="row center">
             <h5 class="header col s12 light">
-              A modern responsive front-end framework based on Material Design
+              “Any fool can write code that a computer can understand. Good
+              programmers write code that humans can understand.”
             </h5>
           </div>
         </div>
@@ -148,20 +149,32 @@
       <div class="section">
         <div class="row">
           <div class="col s12 center">
-            <h3><i class="mdi-content-send brown-text"></i></h3>
-            <h4>Contact Us</h4>
-            <p class="left-align light">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              scelerisque id nunc nec volutpat. Etiam pellentesque tristique
-              arcu, non consequat magna fermentum ac. Cras ut ultricies eros.
-              Maecenas eros justo, ullamcorper a sapien id, viverra ultrices
-              eros. Morbi sem neque, posuere et pretium eget, bibendum
-              sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis
-              nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa
-              odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget
-              dignissim mauris, non tristique erat. Vestibulum ante ipsum primis
-              in faucibus orci luctus et ultrices posuere cubilia Curae;
-            </p>
+            <h3><i class="mdi-content-send black-text"></i></h3>
+            <p class="left-align light"></p>
+
+            <div class="carousel carousel-slider center">
+              <div class="carousel-fixed-item center">
+                <a class="btn waves-effect white grey-text darken-text-2"
+                  >button</a
+                >
+              </div>
+              <div class="carousel-item red white-text" href="#one!">
+                <h2>First Panel</h2>
+                <p class="white-text">This is your first panel</p>
+              </div>
+              <div class="carousel-item red white-text" href="#two!">
+                <h2>Second Panel</h2>
+                <p class="white-text">This is your second panel</p>
+              </div>
+              <div class="carousel-item red white-text" href="#three!">
+                <h2>Third Panel</h2>
+                <p class="white-text">This is your third panel</p>
+              </div>
+              <div class="carousel-item red white-text" href="#four!">
+                <h2>Fourth Panel</h2>
+                <p class="white-text">This is your fourth panel</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -172,13 +185,16 @@
         <div class="container">
           <div class="row center">
             <h5 class="header col s12 light">
-              A modern responsive front-end framework based on Material Design
+              "Code is like humor. When you have to explain it, it's bad."
             </h5>
           </div>
         </div>
       </div>
       <div class="parallax">
-        <img src="./yosemite.JPG" alt="Unsplashed background img 3" />
+        <img
+          src="./images/coral_landscape1.jpg"
+          alt="Unsplashed background img 3"
+        />
       </div>
     </div>
 
@@ -186,29 +202,27 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Company Bio</h5>
-            <p class="grey-text text-lighten-4">
-              We are a team of college students working on this project like
-              it's our full time job. Any amount would help support and continue
-              development on this project and is greatly appreciated.
-            </p>
+            <h5 class="white-text left-align">Danielle Arias</h5>
+            <p class="text-lighten-4"> Need more info? Please feel free to contact me! </p>
           </div>
           <div class="col l3 s12">
-            <h5 class="white-text">Settings</h5>
+            <h5 class="white-text">Connect</h5>
             <ul>
-              <li><a class="white-text" href="#!">Link 1</a></li>
+              <li>
+                <li><a class="white-text" href="#!">Link 1</a></li>
+              </li>
               <li><a class="white-text" href="#!">Link 2</a></li>
               <li><a class="white-text" href="#!">Link 3</a></li>
               <li><a class="white-text" href="#!">Link 4</a></li>
             </ul>
           </div>
           <div class="col l3 s12">
-            <h5 class="white-text">Connect</h5>
+            <h5 class="white-text">Contact</h5>
             <ul>
-              <li><a class="white-text" href="#!">Link 1</a></li>
-              <li><a class="white-text" href="#!">Link 2</a></li>
-              <li><a class="white-text" href="#!">Link 3</a></li>
-              <li><a class="white-text" href="#!">Link 4</a></li>
+              <li><a class="white-text"> T: +16199161507</a></li>
+              <li>
+                <a class="white-text"> E: daniellearias321@gmail.com </a>
+              </li>
             </ul>
           </div>
         </div>
