added buttons to carousel

--- a/index.html
+++ b/index.html
@@ -154,14 +154,18 @@
 
             <div class="carousel carousel-slider center">
               <div class="carousel-fixed-item center">
-                <a class="btn waves-effect white grey-text darken-text-2"
-                  >button</a
-                >
+                <a class="btn waves-effect pink darken-4 -text lighten-text-1"
+              >Github Repo</a
+            >
+            <a class="btn waves-effect pink darken-4 -text lighten-text-1"
+            >Project link</a
+          >
               </div>
               <div class="carousel-item red white-text" href="#one!">
                 <h2>First Panel</h2>
                 <p class="white-text">This is your first panel</p>
               </div>
+  
               <div class="carousel-item red white-text" href="#two!">
                 <h2>Second Panel</h2>
                 <p class="white-text">This is your second panel</p>
